Fix z-index issue with admin notice

--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -17,6 +17,7 @@
     top: calc(10px + var(--this-top-offset, 0));
     left: 20px;
     right: 20px;
+    z-index: 1;
     margin: 0;
     box-shadow: 0 3px 4px 1px rgb(0 0 0 / 35%);
 
